[package]
name = "misccli"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/misccli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
log = "0.4"
simplelog = "0.12"
thiserror = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zstd = "0.13"
